[tool.poetry]
authors = ["Brian Thorne <brian@hardbyte.nz>"]
description = "A request rate limiter for fastapi"
documentation = "https://github.com/hardbyte/fastapi-ratelimit"
homepage = "https://github.com/hardbyte/fastapi-ratelimit"
include = ["CHANGELOG.md", "LICENSE", "README.md"]
keywords = ["fastapi", "limiter", "ratelimit"]
license = "Apache-2.0"
name = "fastapi-ratelimit"
packages = [
  {include = "fastapi_ratelimit"},
]
readme = "README.md"
repository = "https://github.com/hardbyte/fastapi-ratelimit.git"
version = "0.1.0"

[tool.poetry.dependencies]
aioredis = "^2.0.1"
fastapi = "*"
python = "^3.7"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
flake8 = "*"
isort = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-mock = "*"
pytest-xdist = "*"
uvicorn = "*"
requests = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
